Nav mesh now rebakes ever 1.5 seconds

--- a/MSBuildForUnity.Common.props
+++ b/MSBuildForUnity.Common.props
@@ -2,9 +2,9 @@
   
   <!-- These are specific to this Unity project and can't be overridden -->
   <PropertyGroup>
-    <UnityProjectAssetsPath>D:\MAARS\Challenge1_PathNav\Assets</UnityProjectAssetsPath>
+    <UnityProjectAssetsPath>C:\Users\drobe\Desktop\MAARS\Challenge1_PathNav\Assets</UnityProjectAssetsPath>
     
-    <_MSBuildForUnityGeneratedOutputDirectory>D:\MAARS\Challenge1_PathNav\MSBuild</_MSBuildForUnityGeneratedOutputDirectory>
+    <_MSBuildForUnityGeneratedOutputDirectory>C:\Users\drobe\Desktop\MAARS\Challenge1_PathNav\MSBuild</_MSBuildForUnityGeneratedOutputDirectory>
     <MSBuildForUnityGeneratedProjectDirectory>$(_MSBuildForUnityGeneratedOutputDirectory)\Projects</MSBuildForUnityGeneratedProjectDirectory>
   </PropertyGroup>
   
